--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,8 @@ html {
 header {
     padding-top: 8px;
     background-color: #2b2727;
-    box-shadow: 0 0 12px #0000008c;
+    background-color: #1f0d32;
+    box-shadow: 0 0 10px #0000008c;
 }
 
 .content-logo {
@@ -68,13 +69,10 @@ header {
     color: #fff;
 }
 
-
-
 /* ---------------------Main----------------------- */
 
 .content-inputs {
-    width: 90%;
-    max-width: 1000px;
+    max-width: 1050px;
     margin: 0 auto;
     padding: 45px 0 10px;
     display: flex;
@@ -89,19 +87,24 @@ header {
 }
 
 .icon-search {
+    width: 48px;
     position: absolute;
     right: 0;
     top: 0;
-    padding: 7px;
     background: rgb(48, 46, 46);
-    border-radius: 0 8px 8px 0;
+    background: #1f0d32;
+    border-radius: 0 12px 10px 0;
+    padding: 10px;
 }
 
-input, select {
+input,
+select {
     width: 100%;
-    border-radius: 8px;
-    border: 1px solid #000;
-    padding: 15px 6px;
+    border-radius: 10px;
+    border: 1px solid #1f0d32;
+    outline: none;
+    padding: 14px 6px;
+    font-size: 1.6rem;
 }
 
 select {
@@ -129,7 +132,7 @@ h2 {
     border-radius: 8px;
     padding: 0 0 20px;
     box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
-        0px 1px 3px 0px rgba(0, 0, 0, 0.12) ;
+        0px 1px 3px 0px rgba(0, 0, 0, 0.12);
     gap: 80px;
 }
 
@@ -140,7 +143,7 @@ h2 {
     border-radius: 8px 8px 0 0;
     background-color: #f3efef;
     padding: 20px;
-    filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, .5)) drop-shadow(-1px -1px 2px rgba(255, 255, 255, .8));
+    filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.5)) drop-shadow(-1px -1px 2px rgba(255, 255, 255, 0.8));
 }
 
 h3 {
@@ -157,7 +160,8 @@ h3 {
     font-weight: 400;
 }
 
-.text-rosa, .text-price {
+.text-rosa,
+.text-price {
     font-weight: 700;
 }
 
@@ -167,6 +171,7 @@ h3 {
     padding: 5px 15px;
     border-radius: 20px;
     border: none;
+    text-decoration: none;
 }
 
 .span-price {
@@ -176,35 +181,77 @@ h3 {
 
 .button-add {
     width: 100%;
+    max-width: 320px;
     margin: 0 auto;
     background-color: #045aa8;
-    color: white;
+    color: #fff;
     padding: 10px;
     border: none;
     border-radius: 20px;
     font-size: 1.8rem;
+    cursor: pointer;
+    transition: transform 0.1s ease, background-color 0.3s ease;
+}
+
+.button-add:hover {
+    transform: scale(0.98);
 }
 
 /* ---------------------Footer----------------------- */
 
 footer {
-    background-color: #2b2727;
-    padding: 30px 0;
+    background-color: #131212;
+    padding: 35px 0 20px;
+    color: #fff;
 }
 
+.content-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    color: #fff;
+    font-size: 1.5rem;
+    font-weight: 300;
+}
+.text-footer {
+    font-weight: 300;
+    font-size: 1.8rem;
+}
 
-@media(min-width:750px){
-    h2{
+.icon-social {
+    width: 37px;
+    padding: 8px;
+    border-radius: 100%;
+    cursor: pointer;
+    margin-right: 5px;
+    border: 1px solid #b3176585;
+    transition: background-color 0.3s ease;
+}
+
+.icon-social:hover {
+    background-color: #2c2a2a86;
+    border: none;
+}
+.text-copyrigth {
+    text-align: center;
+    padding: 10px;
+    border-top: 1px solid rgba(82, 78, 78, 0.356);
+}
+
+@media (min-width: 750px) {
+    h2 {
         padding: 35px 85px 0;
         font-size: 4rem;
     }
     .image-logo {
         width: 65px;
     }
-    .span-logo{
+    .span-logo {
         font-size: 2.8rem;
     }
-    .box-icon-cart{
+    .box-icon-cart {
         margin-right: 0px;
     }
 }
