--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,10 +1,12 @@
 :root {
     --color-bg: #f5f5f5;
+    --color-bg: #fff;
     --color-primary-bg: #1f0d32;
-    --color-bg-image: #D7DADD;
+    --color-bg-image: #e0e0e0;
     --color-input-border: #1f0d32be;
     --color-hover-border: #3e95e6de;
     --color-border-grey:  #2c2a2a86;
+    --color-border-card:  rgb(201, 190, 190);
     --color-button-primary: #06539b;
     --color-button-category: #b31765;
     --color-white: #fff;
@@ -140,19 +142,21 @@ h2 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 15px;
-    row-gap: 35px;
+    gap: 35px;
+    row-gap: 40px;
     padding: 15px 0 60px;
 }
 
 .card {
-    flex: 0 1 280px;
+    flex: 0 1 250px;
     max-width: 100%;
+    position: relative; 
     border-radius: 10px;
-    padding: 0 0 15px;
+    border-radius: 20px;
+    padding: 8px;
     text-align: center;
     transition: transform 0.3s ease;
-    border: 1px solid var(--color-border-grey);
+    border: 1px solid var(--color-border-card);
     background-color: var(--color-white);
 }
 
@@ -162,56 +166,45 @@ h2 {
 
 .card-img {
     width: 100%;
-    border-radius: 10px 10px 0 0;
+    border-radius: 16px 16px 0 0;
     background-color: var(--color-bg-image);
 }
 
 h3 {
-    font-size: 2rem;
-    min-height: 70px;
-    padding: 20px 20px 5px;
+    font-size: 1.8rem;
+    min-height: 68px;
+    padding: 20px 0px 5px;
 }
 
 .card-info {
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 12px;
     font-size: 1.8rem;
-    padding: 10px 0 10px;
+    padding: 0 0 10px;
     font-weight: 400;
 }
 
-.text-rosa {
-    margin-right: 5px;
-}
-
-.button-category {
-    border: none;
-    border-radius: 22px;
-    padding: 5px 15px;
-    font-size: 1.4rem;
-    text-decoration: none;
-    color: var(--color-white);
-    background-color: var(--color-button-category);
-}
-
 .span-price {
-    font-size: 2.2rem;
+    font-size: 2.1rem;
     color: var(--color-icon);
-    font-weight: 700;
+}
+
+.span-category{
+    font-weight: 500;
 }
 
 .button-add {
     width: 100%;
     max-width: 215px;
-    margin: 10px auto;
+    margin: 10px auto 3px;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 12px;
     padding: 5px;
     border: none;
-    border-radius: 22px;
+    border-radius: 12px;
     font-size: 1.6rem;
     cursor: pointer;
     transition: transform 0.1s ease, background-color 0.3s ease;
@@ -221,6 +214,37 @@ h3 {
 
 .button-add:hover {
     transform: scale(0.98);
+}
+
+.message-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.message-text{
+    font-size: 1.8rem;
+    text-align: center;
+    color: var(--color-black);
+}
+.message-image{
+    width: 200px;
+}
+
+.div-discount {
+    width: 60px;
+    padding: 4px 10px 5px 4px;
+    position: absolute;
+    top: 6px;
+    left: 0;
+    border-radius: 10px  0 0 5px;
+    clip-path: polygon(0 0, calc(100% - 10px) 0, 100% 50%, calc(100% - 10px) 100%, 0 100%); 
+    background-color: var(--color-icon);
+}
+
+.text-discount {
+    font-size: 1.6rem;
+    font-weight: bold; 
+    color: var(--color-white); 
 }
 
 /* ---------------------Footer----------------------- */
@@ -264,20 +288,6 @@ footer {
     border-top: 1px solid  var(--color-border-grey);
 }
 
-.message-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.message-text{
-    font-size: 1.8rem;
-    text-align: center;
-    color: var(--color-black);
-}
-.message-image{
-    width: 200px;
-}
-
 @media (min-width: 750px) {
     .image-logo {
         width: 65px;
@@ -307,3 +317,5 @@ footer {
         font-size: 3.5rem;
     }
 }
+
+
