--- a/src/shared/component/footer/footer.css
+++ b/src/shared/component/footer/footer.css
@@ -1,8 +1,8 @@
 .footer {
   padding: 35px 0 20px;
   text-align: center;
-  color: white;
-  background-color: black;
+  color: var(--color-white);
+  background-color: var(--color-black);
 }
 
 .footer__content {
@@ -20,22 +20,23 @@
   display: flex;
   gap: 20px;
 }
+
 .footer__icon {
   padding: 6px;
   border-radius: 100%;
   cursor: pointer;
   font-size: 3.5rem;
   transition: background-color 0.3s ease;
-  border: 1px solid palevioletred;
+  border: 1px solid var(--color-button-category);
 }
 
 .footer__icon:hover {
   border:1px solid black;
-  background-color: grey;
+  background-color: var(--color-border-grey);
 }
 
 .footer__copyright {
   padding: 15px 0 0;
   font-size: 1.5rem;
-  border-top: 1px solid  gray;
+  border-top: 1px solid  var(--color-border-grey);
 }
