--- a/src/shared/component/navbar/nav.css
+++ b/src/shared/component/navbar/nav.css
@@ -28,7 +28,7 @@
 }
 
 .nav__cart-icon {
-    color: white;
+    color: var(--color-white);
     font-size: 3.5rem;
 }
 
@@ -42,4 +42,13 @@
     border-radius: 100%;
     color: var(--color-white);
     background-color: var(--color-icon);
+}
+
+@media (min-width: 750px) {
+    .nav__logo-image {
+        width: 65px;
+    }
+    .nav__logo-text{
+        font-size: 2.8rem;
+    }
 }
