--- a/src/shared/component/input/inputCategory.css
+++ b/src/shared/component/input/inputCategory.css
@@ -1,9 +1,20 @@
-.box-input-search {
+.input-category {
   width: 90%;
   position: relative;
 }
 
-.icon-search {
+.input-category__input{
+  width: 100%;
+  border-radius: 10px;
+  outline: none;
+  padding: 14px 6px;
+  font-weight: 600;
+  color: var(--color-input-border);
+  border: 2px solid var(--color-input-border);
+  font-size: 1.3rem;
+}
+
+.input-category__icon{
   font-size: 4.8rem;
   padding: 5px;
   position: absolute;
@@ -14,26 +25,16 @@
   background: var(--color-primary-bg);
 }
 
-input {
-  width: 100%;
-  border-radius: 10px;
-  outline: none;
-  padding: 14px 6px;
-  font-weight: 600;
-  color: var(--color-input-border);
-  border: 2px solid var(--color-input-border);
-  font-size: 1.3rem;
-}
-input::placeholder {
+.input-category__input::placeholder {
   padding-left: 6px;
   color: var(--color-input-border);
 }
 
 @media(min-width:750px){
-  .box-input-search{
+  .input-category {
     width: 40%;
   }
-  input{
+  .input-category__input{
     font-size: 1.6rem;
-  }
+  } 
 }
