fix: correct class names according to BEM convention

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
     --color-bg: #fff;
-    --color-primary-bg: #140920;
+    --color-primary-bg: #1f0d32;
     --color-bg-image: #e0e0e0;
     --color-input-border: #170925e1;
     --color-hover-border: #3e95e6de;
