--- a/src/app/layout/mainLayout/mainLayout.css
+++ b/src/app/layout/mainLayout/mainLayout.css
@@ -1,4 +1,11 @@
-.header {
+.main-layout__header {
   padding-top: 8px;
-  background-color: #1f0d32;
+  background-color: var(--color-primary-bg);
+}
+
+.main-layout__footer{
+  background-color: var(--color-black);
+  padding: 35px 0 20px;
+  text-align: center;
+  color: var(--color-white);
 }
