feat: add readme to project

--- a/src/pages/products/products.css
+++ b/src/pages/products/products.css
@@ -1,7 +1,7 @@
 .products__inputs {
   max-width: 1050px;
   margin: 0 auto;
-  padding: 45px 25px 45px;
+  padding: 45px 25px 30px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,9 +15,11 @@
 }
 
 @media (min-width: 1024px) {
+  .products__inputs {
+    padding: 50px 25px 40px;
+  }
   .products__title{
       text-align: start;
-      padding:0 0 0 50px;
       font-size: 3.5rem;
   }
 }
