--- a/src/component/input/input.css
+++ b/src/component/input/input.css
@@ -15,8 +15,8 @@
 }
 
 .input-category__icon{
-  font-size: 4.8rem;
-  padding: 5px;
+  font-size: 3.6rem;
+  padding: 0 4px;
   position: absolute;
   right: 0;
   top: 0;
@@ -32,7 +32,7 @@
 
 @media(min-width:750px){
   .input-category {
-    width: 40%;
+    /* width: 40%; */
   }
   .input-category__input{
     font-size: 1.6rem;
