--- a/src/component/mainLayout/mainLayout.css
+++ b/src/component/mainLayout/mainLayout.css
@@ -3,6 +3,10 @@
   background-color: var(--color-primary-bg);
 }
 
+.main-layout__main{
+  min-height: 100vh;
+}
+
 .main-layout__footer{
   background-color: var(--color-black);
   padding: 35px 0 20px;
