--- a/src/component/card/card.css
+++ b/src/component/card/card.css
@@ -9,6 +9,7 @@
     transition: transform 0.3s ease;
     border: 1px solid var(--color-border-card);
     background-color: var(--color-white);
+    border: 1px solid var(--color-hover-border);
 }
 
 .card:hover {
