--- a/src/component/navbar/nav.css
+++ b/src/component/navbar/nav.css
@@ -1,18 +1,26 @@
+.logo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 80px;
+}
 .nav__content {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 15px 0;
+    padding: 18px 0;
 }
 
 .nav__links{
     display: flex;
-    gap: 20px;
+    gap: 30px;
 }
 
 .nav__link{
+    padding: 6px 16px 0;
+    border-radius: 6px;
     color: var(--color-white);
-    font-size: 2rem;
+    font-size: 2.2rem;
     text-decoration: none;
 }
 
@@ -57,7 +65,7 @@
 
 @media (min-width: 750px) {
     .nav__logo-image {
-        width: 65px;
+        width: 60px;
     }
     .nav__logo-text{
         font-size: 2.8rem;
