--- a/src/pages/productsView/products.css
+++ b/src/pages/productsView/products.css
@@ -1,3 +1,13 @@
+.products__content {
+  min-height: 50vh;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 35px;
+  row-gap: 40px;
+  padding: 45px 0 60px;
+}
+
 .products__inputs {
   max-width: 800px;
   margin: 0 auto;
