--- a/src/component/common/quantityControls.css
+++ b/src/component/common/quantityControls.css
@@ -1,12 +1,18 @@
-.quantity-controls{
-  background-color: rgba(224, 219, 220, 0.87);
-  padding: 2px 12px;
-  font-size: 2rem;
-  border-radius: 10px; 
+.quantity-controls {
+    /* background-color: rgba(224, 219, 220, 0.87);
+  padding: 2px 12px; */
+    font-size: 2rem;
+    border-radius: 10px;
+    display: inline-block;
+    display: flex;
+    align-items: center;
+    font-size: 2rem;
+    border-radius: 10px;
+    justify-content: center;
 }
 
-.quantity-controls__button{
-  font-size: 2rem;
-  padding: 8px;
-  margin: 10px;
+.quantity-controls__button {
+    font-size: 2rem;
+    padding: 8px;
+    margin: 10px;
 }
