--- a/src/component/select/select.css
+++ b/src/component/select/select.css
@@ -9,6 +9,14 @@
   border: 1px solid var(--color-input-border);
   font-weight: 300;
 }
+.select-form{
+  border-color: #aca0a0;
+  padding: 15px;
+  margin-bottom: 1rem;
+  outline: none;
+  border-radius: 10px;
+  border: 1px solid #170925e1;
+}
 
 @media(min-width:750px){
   .select-category{
