--- a/src/pages/cartView/cartView.css
+++ b/src/pages/cartView/cartView.css
@@ -3,6 +3,7 @@
 }
 .total-amount{
   text-align: end;
+  margin-top: 0;
 }
 
 .cart-empty{
@@ -23,3 +24,4 @@
   border-radius: 10px;
   padding: 50px 0 ;
 }
+
