--- a/src/component/footer/footer.css
+++ b/src/component/footer/footer.css
@@ -29,7 +29,7 @@
 }
 
 .footer__copyright {
-  padding: 15px 0 0;
+  padding: 15px 0 ;
   font-size: 1.5rem;
   border-top: 1px solid  var(--color-border-grey);
 }
