--- a/src/component/forms/formLogin.css
+++ b/src/component/forms/formLogin.css
@@ -1,51 +1,68 @@
-.form-login{
-  width: 100%;
-  max-width: 400px;
-  margin: 8px auto;
-  border-radius: 10px;
-  padding: 50px 0 ;
-  background-color: pink;
-  padding: 50px;
-  display: grid;
-  gap: 15px;
+.title-form-login {
+    text-align: center;
+    font-size: 3rem;
+    padding: 0 0 15px;
+    color: #1f0d32;
+}
+.form-login {
+    width: 90%;
+    max-width: 400px;
+    margin: 8px auto;
+    border-radius: 10px;
+    padding: 50px 0;
+    background-color: #e3dbeb8f;
+    box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.322), 0px 3px 4px 0px rgba(0, 0, 0, 0.14), 0px 1px 8px 0px rgba(0, 0, 0, 0.12);
+    padding: 50px;
+    display: grid;
+    gap: 15px;
 }
 
-.input-login{
-  width: 100%;
-  padding: 15px ;
-
+.input-login {
+    width: 100%;
+    padding: 15px;
 }
-.input-content{
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-}
-
-.login-content-button{
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
+.input-content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
 }
 
-.input-login-icon{
-  font-size: 3.6rem;
-  padding: 0 4px;
-  position: absolute;
-  right: 0;
-  top: 8px;
-  border-radius: 0 12px 10px 0;
-  background-color: transparent;
-  color: rgba(78, 71, 71, 0.733);
-  font-size: 2.5rem;
+.login-content-button {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
 
-.link-password{
-  text-align: center;
-  font-size: 1.8rem;
-  padding: 10px;
-  text-decoration: none;
-  color: #06539B; 
+.input-login-icon {
+    font-size: 3.6rem;
+    padding: 0 4px;
+    position: absolute;
+    right: 0;
+    top: 8px;
+    border-radius: 0 12px 10px 0;
+    background-color: transparent;
+    color: #522e79b4;
+    font-size: 2.5rem;
+}
+
+.link-password {
+    text-align: center;
+    font-size: 1.8rem;
+    padding: 10px;
+    text-decoration: none;
+    color: #1f0d32;
+    font-weight: 500;
+}
+.button-login {
+    background-color: #1f0d32;
+    font-size: 1.7rem;
+    border-radius: 8px;
+}
+
+.content-label-login {
+    width: 100%;
+    min-height: 65px;
 }
