--- a/src/component/forms/formShop.css
+++ b/src/component/forms/formShop.css
@@ -1,6 +1,6 @@
 .container-form{
     width: 100%;
-    margin: 70px auto;
+    margin: 70px auto 80px;
 }
 
 .title-form{
@@ -26,7 +26,7 @@
     border-radius: 10px;
     padding: 30px  50px 35px;
     box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.2), 0px 3px 4px 0px rgba(0, 0, 0, 0.14), 0px 1px 8px 0px rgba(0, 0, 0, 0.12);
-    border: 1px solid rgba(36, 35, 35, 0.267);
+    border: 1px solid rgba(36, 35, 35, 0.322);
 }
 
 .button-form {
@@ -44,6 +44,7 @@
 .content-label {
     display: flex;
     flex-direction: column;
+    min-height: 112px;
 }
 
 .content-select-phone {
