--- a/src/pages/cartView/cartView.css
+++ b/src/pages/cartView/cartView.css
@@ -1,6 +1,3 @@
-.box{
-  display: flex;
-}
 .total-amount{
   text-align: end;
   margin-top: 0;
@@ -25,3 +22,12 @@
   padding: 50px 0 ;
 }
 
+.cart-header{
+  width: 90%;
+  margin: 25px auto 0;
+  border-radius: 0 0 10px 10px;
+}
+
+.cart-header h3{
+  font-size: 1.7rem;
+}
