--- a/src/component/navbar/nav.css
+++ b/src/component/navbar/nav.css
@@ -62,6 +62,16 @@
     background-color: var(--color-icon);
 }
 
+.title-hello{
+    color: white;
+    font-size: 2rem;
+}
+
+.box-hello{
+    display: flex;
+    gap: 50px;
+}
+
 @media (min-width: 750px) {
     .nav__logo-image {
         width: 60px;
