--- a/src/component/navbar/nav.css
+++ b/src/component/navbar/nav.css
@@ -1,4 +1,4 @@
-.logo{
+.logo {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -10,12 +10,12 @@
     padding: 18px 0;
 }
 
-.nav__links{
+.nav__links {
     display: flex;
     gap: 30px;
 }
 
-.nav__link{
+.nav__link {
     padding: 6px 16px 0;
     border-radius: 6px;
     color: var(--color-white);
@@ -35,6 +35,7 @@
 }
 
 .nav__logo-text {
+    display: none;
     font-weight: bold;
     font-size: 2rem;
     font-family: "Playwrite NG Modern", cursive;
@@ -44,63 +45,128 @@
 .nav__cart-box {
     position: relative;
     margin-right: 10px;
+    text-align: center;
 }
 
 .nav__cart-icon {
     color: var(--color-white);
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 
 .nav__cart-counter {
     position: absolute;
     top: -10px;
-    right: -12px;
-    font-size: 1.5rem;
+    right: -10px;
+    font-size: 1.2rem;
     line-height: 1.6;
-    padding: 0 8px;
+    padding: 0 6px;
     border-radius: 100%;
     color: var(--color-white);
     background-color: var(--color-icon);
 }
 
-.content-logo{
+.content-logo {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 50px;
 }
 
-.title-hello{
+.title-hello {
     color: white;
     font-size: 1.8rem;
 }
 
-.box-hello{
+.box-hello {
     display: flex;
     align-items: center;
     gap: 20px;
+}
+.nav__actions {
+    display: flex;
+    align-items: center;
+    gap: 0px;
+}
+
+.logout-icon {
+    font-size: 2.5rem;
+    color: #fff;
+}
+.logout-btn {
+    display: flex;
+    align-items: center;
+    gap: 0.4rem;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.logout-btn:hover .logout-icon {
+    color: red;
+}
+
+.cart-text,
+.logout-text {
+    display: none;
+    font-size: 1.2rem;
+    margin-top: 0.3rem;
+    color: #fff;
+}
+
+.logout-btn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: none;
+    cursor: pointer;
+    text-align: center;
+    color: #fff;
 }
 
 @media (min-width: 750px) {
     .nav__logo-image {
         width: 60px;
     }
-    .nav__logo-text{
+    .nav__logo-text {
         font-size: 2.8rem;
     }
-    .nav__cart-icon{
+    .nav__cart-icon {
         font-size: 3.5rem;
     }
-    .content-logo{
+    .content-logo {
         flex-direction: row;
     }
-    .nav__link{
+    .nav__link {
         display: block;
     }
-    .box-hello{
+    .box-hello {
         gap: 50px;
     }
-    .title-hello{
+    .title-hello {
         font-size: 2rem;
+    }
+    .logout-icon {
+        font-size: 3rem;
+    }
+    .cart-text,
+    .logout-text {
+        font-size: 1.5rem;
+    }
+    .nav__logo-text {
+        display: block;
+    }
+    .cart-text,
+    .logout-text {
+        display: block;
+    }
+    .nav__cart-counter {
+        top: -12px;
+        right: -4px;
+        font-size: 1.5rem;
+        line-height: 1.6;
+        padding: 0 8px;
+    }
+    .nav__actions {
+        gap: 30px;
     }
 }
